--- a/nvim-cheats.conf
+++ b/nvim-cheats.conf
@@ -5,9 +5,9 @@ $nvim_cheats_script = ~/.config/hypr/scripts/nvim-cheats.sh
 
 # Keybinding
 # Opens the script in a floating terminal with specific title
-bind = SUPER, V, exec, ghostty --title=nvim-cheats -e $nvim_cheats_script
+bind = SUPER, I, exec, ghostty --title=nvim-cheats -e $nvim_cheats_script
 
 # Window Rules
-windowrule = float, title:^(nvim-cheats)$
-windowrule = size 600 400, title:^(nvim-cheats)$
-windowrule = center, title:^(nvim-cheats)$
+windowrule = float 1, match:title ^(nvim-cheats)$
+windowrule = size 800 500, match:title ^(nvim-cheats)$
+windowrule = center 1, match:title ^(nvim-cheats)$
